Added df.shape results to the assignemtn of week 3

--- a/Simones Capstone project.ipynb
+++ b/Simones Capstone project.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "6         M7A  Downtown Toronto  Queen's Park, Ontario Provincial Government"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,16 +161,29 @@
     "#Drop lines with \"Not assigned\" Postal Code\n",
     "df = dfs.loc[dfs['Borough'] != \"Not assigned\"]\n",
     "\n",
+    "#See first lines of the dataframe\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 3)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.shape()"
+    "#Shape of the dataframe\n",
+    "df.shape"
    ]
   }
  ],
