Code to get the latitude and the longitude coordinates of each neighborhood is added, the dataframe is updated

--- a/Simones Capstone project.ipynb
+++ b/Simones Capstone project.ipynb
@@ -56,6 +56,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing pandas library and installing lxml (at the first run)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -71,6 +78,13 @@
    "outputs": [],
    "source": [
     "#pip install lxml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing data from wikipedia page, converting into a dataframe and then removing \"Not assigned\" postal codes"
    ]
   },
   {
@@ -106,31 +120,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>0</th>\n",
        "      <td>M3A</td>\n",
        "      <td>North York</td>\n",
        "      <td>Parkwoods</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>M4A</td>\n",
        "      <td>North York</td>\n",
        "      <td>Victoria Village</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>M5A</td>\n",
        "      <td>Downtown Toronto</td>\n",
        "      <td>Regent Park, Harbourfront</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>M6A</td>\n",
        "      <td>North York</td>\n",
        "      <td>Lawrence Manor, Lawrence Heights</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>4</th>\n",
        "      <td>M7A</td>\n",
        "      <td>Downtown Toronto</td>\n",
        "      <td>Queen's Park, Ontario Provincial Government</td>\n",
@@ -141,11 +155,11 @@
       ],
       "text/plain": [
        "  Postal Code           Borough                                Neighbourhood\n",
-       "2         M3A        North York                                    Parkwoods\n",
-       "3         M4A        North York                             Victoria Village\n",
-       "4         M5A  Downtown Toronto                    Regent Park, Harbourfront\n",
-       "5         M6A        North York             Lawrence Manor, Lawrence Heights\n",
-       "6         M7A  Downtown Toronto  Queen's Park, Ontario Provincial Government"
+       "0         M3A        North York                                    Parkwoods\n",
+       "1         M4A        North York                             Victoria Village\n",
+       "2         M5A  Downtown Toronto                    Regent Park, Harbourfront\n",
+       "3         M6A        North York             Lawrence Manor, Lawrence Heights\n",
+       "4         M7A  Downtown Toronto  Queen's Park, Ontario Provincial Government"
       ]
      },
      "execution_count": 5,
@@ -161,8 +175,16 @@
     "#Drop lines with \"Not assigned\" Postal Code\n",
     "df = dfs.loc[dfs['Borough'] != \"Not assigned\"]\n",
     "\n",
-    "#See first lines of the dataframe\n",
+    "#Reset the index and show the first lines of the dataframe\n",
+    "df.reset_index(drop=True, inplace=True)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking the shape of the dataframe"
    ]
   },
   {
@@ -185,6 +207,282 @@
     "#Shape of the dataframe\n",
     "df.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Get the latitude and the longitude coordinates of each neighborhood"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following code is used to download the csv file with the coordinates of each neighborhood (geocoder is not running properly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data downloaded!\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -q -O 'Geospatial_data.csv' https://cocl.us/Geospatial_data\n",
+    "print('Data downloaded!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Framing geospatial data in a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>43.806686</td>\n",
+       "      <td>-79.194353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>43.784535</td>\n",
+       "      <td>-79.160497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>43.763573</td>\n",
+       "      <td>-79.188711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>43.770992</td>\n",
+       "      <td>-79.216917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>43.773136</td>\n",
+       "      <td>-79.239476</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postal Code   Latitude  Longitude\n",
+       "0         M1B  43.806686 -79.194353\n",
+       "1         M1C  43.784535 -79.160497\n",
+       "2         M1E  43.763573 -79.188711\n",
+       "3         M1G  43.770992 -79.216917\n",
+       "4         M1H  43.773136 -79.239476"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "geospatial_data = pd.read_csv(\"Geospatial_data.csv\")\n",
+    "geospatial_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two empty arrays for longitude and latitude data are created.\n",
+    "A for loop is used to scan through the Neighbourhoods list, for each item the Postal code is checked in the geospatial_data frame, the corresponding Latitude and Longitude are added to the Latitude and Longitude array. The arrays are then appended to df dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyterlab/conda/envs/python/lib/python3.6/site-packages/ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n",
+      "/home/jupyterlab/conda/envs/python/lib/python3.6/site-packages/ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  import sys\n"
+     ]
+    }
+   ],
+   "source": [
+    "Latitude = []\n",
+    "Longitude = []\n",
+    "for ind in df.index:\n",
+    "    Latitude.append(geospatial_data[geospatial_data['Postal Code'] == df['Postal Code'][ind]]['Latitude'].values[0])\n",
+    "    Longitude.append(geospatial_data[geospatial_data['Postal Code'] == df['Postal Code'][ind]]['Longitude'].values[0])\n",
+    "df['Latitude'] = Latitude\n",
+    "df['Longitude'] = Longitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "      <td>43.753259</td>\n",
+       "      <td>-79.329656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "      <td>43.725882</td>\n",
+       "      <td>-79.315572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Regent Park, Harbourfront</td>\n",
+       "      <td>43.654260</td>\n",
+       "      <td>-79.360636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
+       "      <td>43.718518</td>\n",
+       "      <td>-79.464763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Queen's Park, Ontario Provincial Government</td>\n",
+       "      <td>43.662301</td>\n",
+       "      <td>-79.389494</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postal Code           Borough                                Neighbourhood  \\\n",
+       "0         M3A        North York                                    Parkwoods   \n",
+       "1         M4A        North York                             Victoria Village   \n",
+       "2         M5A  Downtown Toronto                    Regent Park, Harbourfront   \n",
+       "3         M6A        North York             Lawrence Manor, Lawrence Heights   \n",
+       "4         M7A  Downtown Toronto  Queen's Park, Ontario Provincial Government   \n",
+       "\n",
+       "    Latitude  Longitude  \n",
+       "0  43.753259 -79.329656  \n",
+       "1  43.725882 -79.315572  \n",
+       "2  43.654260 -79.360636  \n",
+       "3  43.718518 -79.464763  \n",
+       "4  43.662301 -79.389494  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
