--- a/The-Battle-of-Neighborhoods-(Week-1).ipynb
+++ b/The-Battle-of-Neighborhoods-(Week-1).ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem description and background"
+    "## Introduction/Business Problem"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Description of the data and use in the problem solution"
+    "## Data: description and use in the problem solution"
    ]
   },
   {
