--- a/The-Battle-of-Neighborhoods-(Week-2).ipynb
+++ b/The-Battle-of-Neighborhoods-(Week-2).ipynb
@@ -688,8 +688,8 @@
     }
    ],
    "source": [
-    "CLIENT_ID = 'VTHYOWUVC51D3W3W5IPZRHMFTZOWC43X5I5AMNDJRGFSTBXR' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'PLE5BUDZ0XQEPYYWWGFCQX30KARGTBXTCUOYDFOO055J33QO' # your Foursquare Secret\n",
+    "CLIENT_ID = '*****' # your Foursquare ID\n",
+    "CLIENT_SECRET = '*****' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "LIMIT = 1000 # A default Foursquare API limit value\n",
     "\n",
