Foursquare credentials masked

--- a/The-Battle-of-Neighborhoods-(Week-2).ipynb
+++ b/The-Battle-of-Neighborhoods-(Week-2).ipynb
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -682,8 +682,8 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: VTHYOWUVC51D3W3W5IPZRHMFTZOWC43X5I5AMNDJRGFSTBXR\n",
-      "CLIENT_SECRET:PLE5BUDZ0XQEPYYWWGFCQX30KARGTBXTCUOYDFOO055J33QO\n"
+      "CLIENT_ID: *****\n",
+      "CLIENT_SECRET:*****\n"
      ]
     }
    ],
